--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@
   height: 200px;
 }
 
+.FortuneCard {
+  height: 500px;
+  width: 400px;
+}
+
 nav {
   display: flex;
   justify-content: center;
