--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,16 @@
   width: 50vmin;
   border-radius: 250px;
   box-shadow: 0px  0px 12px whitesmoke;
+  transition: transform 0.1s ease-in-out;
 }
 
-.App-logo:hover{
+.App-logo:hover {
   cursor: pointer;
-  text-decoration: underline;
-  
+}
+
+.App-logo:active {
+  transform: translateY(2px);
+  box-shadow: none;
 }
 
 .header{
