--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
   height: 50vmin;
   width: 50vmin;
   border-radius: 250px;
-  box-shadow: 0px  0px 12px whitesmoke;
-  transition: transform 0.1s ease-in-out;
+  box-shadow: 0px 0px 12px whitesmoke;
+  transition: transform 1s ease-in-out;
 }
 
 .App-logo:hover {
@@ -17,6 +17,7 @@
 .App-logo:active {
   transform: translateY(2px);
   box-shadow: none;
+  transition-duration: 1s;
 }
 
 .header{
